changed font to roboto, fixed 2nd scroll bar issue with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("Normalize.css");
 
 html, body{
-   font-family: 'Alegreya Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
    scroll-behavior: smooth;
   }
 
@@ -11,6 +11,7 @@ html, body{
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+    overflow-y: hidden;
   }
 
   *{
@@ -127,6 +128,7 @@ html, body{
     font-size: 50px;
     color: white;
     margin-right: 1%;
+    letter-spacing: 2px;
   }
   
   .name-header{
@@ -134,6 +136,7 @@ html, body{
     color: rgb(0, 53, 168);
     margin-left: 3%;
     vertical-align: top;
+    letter-spacing: 1.5px;
   }
 
  
@@ -145,6 +148,7 @@ html, body{
     font-size: 50px;
     color:white;
     margin-top:0;
+    letter-spacing: 2px;
   }
   
   /*
@@ -192,7 +196,7 @@ html, body{
 
   .stack-header{
     color:rgb(2, 36, 109);
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     margin-top: 20%;
   }
 
